--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@umijs/route-utils": "^1.0.33",
     "ahooks": "^2.9.3",
     "antd": "^4.9.4",
+    "braft-editor": "^2.3.9",
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "moment": "^2.25.3",
